2011-05-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Added case mapping functions to CFMutableString.

2011-05-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile:
	* Source/CFString.c:
	* Source/CFStringUtilities.c: Moved some CFString functions to a different
	file to reduce clutter and implemented them.

2011-05-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* GNUmakefile:
	* Source/CFUUID.c:
	* Source/CFRuntime.m:
	* Headers/CoreFoundation/CFUUID.h: Added CFUUID.
	* Tests/CFUUID: And some tests.

2011-05-20 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSCFType.m:
	* Source/NSCFType.h: Add NSCopying.
	* Headers/CoreFoundation/CFBase.h: No longer define CFString as NSString.

2011-05-20 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.m: Deleted.
	* Source/GNUmakefile:
	* Source/CFRuntime.m:
	* Source/Identifier.m:
	* Source/CFString.c:
	* Source/CFStringEncoding.c:
	* Headers/CoreFoundation/ForFoundationOnly.h: Added initial CFString
	implementation using the ICU library.
	* Headers/CoreFoundation/CFStringEncodingExt.h: Protect against multiple
	includes.
	* Tests/CFString: Basic CFString test.

2011-05-06 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.m:
	* Headers/CoreFoundation/CFString.h: Make inline string buffer functions
	inline functions.
	* Headers/CoreFoundation/CFBase.h: Add CF_INLINE.

2011-04-15 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFArray.m:
	* Source/CFDictionary.m:
	* Headers/CoreFoundation/CFNumber.h
	* Headers/CoreFoundation/CFLocale.h
	* Headers/CoreFoundation/CFDictionary.h
	* Headers/CoreFoundation/CFString.h
	* Headers/CoreFoundation/CFBase.h
	* Headers/CoreFoundation/CFNumberFormatter.h
	* Headers/CoreFoundation/CFDate.h
	* Headers/CoreFoundation/CFArray.h: Fixes for C++.

2011-04-02 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m:
	* Source/GNUmakefile:
	* Source/CFCalendar.c:
	* Headers/CoreFoundation/CFCalendar.h: Added empty CFCalendar.